syntax = "proto3";

import "song.proto";
import "google/protobuf/wrappers.proto";

message SongTableColumn {
  Song.MetadataTag tag = 1;
  optional int32 sort_order = 2;
  bool is_sort_desc = 3;
  int32 width_flex = 4;
}

message SongTableState {
  repeated SongTableColumn columns = 1;
}
